# japanese-segmenter

./: Cargo.toml  readme.md
crates/segmenter/: Cargo.toml
crates/segmenter/src/: dictionary.rs  lattice.rs  lib.rs  tokenizer.rs
crates/segmenter/tests/: tokenizer_tests.rs
tools/dict_generator/: Cargo.toml
tools/dict_generator/src/: main.rs
