# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "segmenter"
version = { workspace = true }
edition = "2021"

[dependencies]
bincode = "1.3.3"
bitflags = { version = "2.4.1", features = ["serde"] }
serde = { version = "1.0.192", features = ["derive"] }
regex = "1.10.2"
lazy_static = "1.4.0"


log = "0.4.20"

[dev-dependencies]
lazy_static = "1.4.0"
