[package]
name = "dict_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.29.0", features = ["serde", "serialize"] }
bincode = "1.3.3"
bitflags = { version = "2.4.1", features = ["serde"] }
serde = { version = "1.0.192", features = ["derive"] }
regex = "1.8.4"
serde_json = "1.0.108"

jp_inflections = "0.1.3"
wana_kana = "3.0.0"

segmenter = { workspace = true }
